--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,13 +8,15 @@
 body 
   font-family: 'Secular One', sans-serif
   color: #f1f1f1
-  background: radial-gradient(#530e4d,#390a36, #1c051c )
+  height: 200vh
 
 
 header
   height: 100vh
   display: grid
   place-items: center
+  background: radial-gradient(#530e4d,#390a36, #1c051c )
+  border-bottom: 100px dashed  #530e4d
 
   >section
     display: flex
@@ -55,6 +57,7 @@ header
         >img
           height: 5rem
           position: absolute
+          -webkit-background-clip: red
       
       a:last-child>img
         height: 5.5rem
