--- a/sass/style.css
+++ b/sass/style.css
@@ -80,3 +80,36 @@ header > section > p {
   word-wrap: break-word;
   color: #f1f1f1ce;
 }
+
+.gradientBackground {
+  height: 50px;
+  background: linear-gradient(180deg, #2D082B, #c6a6d2, #c6a6d2);
+}
+
+main > section {
+  height: 100vh;
+  background: linear-gradient(#c6a6d2, #d2bea6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.contentProjects {
+  width: 90%;
+  height: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-evenly;
+}
+
+.contentProjects > div {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.contentProjects img {
+  width: 620px;
+}
