--- a/sass/style.sass
+++ b/sass/style.sass
@@ -72,3 +72,45 @@ header
   word-wrap: break-word
 
   color: #f1f1f1ce
+
+
+// section dos projetos feitos
+
+.gradientBackground
+  height: 50px
+  background: linear-gradient(180deg, #2D082B, #c6a6d2, #c6a6d2 )
+
+main>section
+  height: 100vh
+  background: linear-gradient( #c6a6d2, #d2bea6 )
+  display: flex
+  align-items: center
+  justify-content: center
+
+.contentProjects
+  width: 90%
+  height: 80%
+  display: flex
+  flex-wrap: wrap
+  align-content: space-evenly
+
+  >div
+    flex: 1
+    display: flex
+    flex-direction: column
+    align-items: center
+    text-align: center
+
+    .screens
+      
+
+  
+
+
+
+
+
+.contentProjects img 
+  width: 620px
+
+  
