add links and estilizes texts

--- a/sass/style.css
+++ b/sass/style.css
@@ -87,10 +87,8 @@ header > section > p {
 }
 
 main > section {
-  height: 100vh;
   background: linear-gradient(#c6a6d2, #d2bea6);
   display: flex;
-  align-items: center;
   justify-content: center;
 }
 
@@ -99,7 +97,6 @@ main > section {
   height: 80%;
   display: flex;
   flex-wrap: wrap;
-  align-content: space-evenly;
 }
 
 .contentProjects > div {
@@ -107,9 +104,29 @@ main > section {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 1rem;
+  margin: 6rem 0rem;
   text-align: center;
+  text-transform: uppercase;
+  color: #131313;
 }
 
-.contentProjects img {
+.contentProjects > div .screens {
+  font-size: 1.5rem;
+  color: #2a2a2a;
+}
+
+.contentProjects > div .screens > figure {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.contentProjects > div .screens > figure img {
   width: 620px;
+}
+
+.contentProjects > div .texts > h3 {
+  font-size: 2rem;
+  font-weight: bold;
 }
