--- a/sass/style.sass
+++ b/sass/style.sass
@@ -81,10 +81,8 @@ header
   background: linear-gradient(180deg, #2D082B, #c6a6d2, #c6a6d2 )
 
 main>section
-  height: 100vh
   background: linear-gradient( #c6a6d2, #d2bea6 )
   display: flex
-  align-items: center
   justify-content: center
 
 .contentProjects
@@ -92,25 +90,34 @@ main>section
   height: 80%
   display: flex
   flex-wrap: wrap
-  align-content: space-evenly
 
   >div
     flex: 1
     display: flex
     flex-direction: column
     align-items: center
+    gap: 1rem
+    margin: 6rem 0rem
     text-align: center
+    text-transform: uppercase
+    color: #131313
 
     .screens
-      
+      font-size: 1.5rem
+      color: #2a2a2a
 
-  
+      >figure
+        display: flex
+        flex-direction: column
+        gap: 2rem
 
+        img
+          width: 620px
+    
+    .texts
 
-
-
-
-.contentProjects img 
-  width: 620px
+      >h3
+        font-size: 2rem
+        font-weight: bold
 
   
