--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,10 +1,36 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap')
+
+
+$desktopMin-width: 1450px
+$tablet-width: 1000px
+$small-tablet-width: 775px
+$mobile-width: 10px
+
+
+@mixin desktopMin
+  @media screen and ( max-width: #{$desktopMin-width} )
+    @content
+
+@mixin tablet
+  @media screen and ( max-width: #{$tablet-width} )
+    @content
+
+@mixin smallTablet
+  @media screen and ( max-width: #{$tablet-width} )
+    @content
+
+@mixin mobile
+  @media screen and ( max-width: #{$mobile-width} )
+    @content
+    
   
+
 body 
   font-family: 'Secular One', sans-serif
   color: #f1f1f1
@@ -25,17 +51,33 @@ header
       font-size: 2.8rem
       line-height: 0%
       color: #c9b3c8be
+      @include desktopMin
+        font-size: 2.5rem
+      @include tablet
+        font-size: 2.1rem
+      @include smallTablet
+        font-size: 2.1rem
+        
+      
 
 .titleContainer
   text-transform: uppercase
   font-weight: 700
   font-size: 22rem
   line-height: 72%
+  @include desktopMin
+    font-size: 18rem
+  @include tablet
+    font-size: 14rem
 
   >div
     display: flex
     justify-content: space-between
     font-size: 17rem
+    @include desktopMin
+      font-size: 13rem
+    @include tablet
+      font-size: 10rem
 
     >div
       width: 100%
@@ -55,6 +97,8 @@ header
         >img
           height: 5rem
           position: absolute
+          @include tablet
+            scale: 90%
       
       a:last-child>img
         height: 5.5rem
@@ -70,8 +114,11 @@ header
   text-align: center
   text-indent: 15%
   word-wrap: break-word
-
-  color: #f1f1f1ce
+  color: #f1f1f1ce  
+  @include desktopMin
+    font-size: 1.5rem
+  @include tablet
+    font-size: 1.2rem
 
 
 // section dos projetos feitos
@@ -113,11 +160,74 @@ main>section
 
         img
           width: 620px
+
+          @include desktopMin
+            width: 490px
     
     .texts
+      font-size: 2rem
+      font-weight: bold
 
-      >h3
-        font-size: 2rem
-        font-weight: bold
+    .buttons
+      width: 100%
+      display: flex
+      justify-content: center
+      gap: 2rem
+
+      >a>button
+        margin-top: 1rem
+        width: 13rem
+        height: 4rem
+        border-radius: 0.2rem
+        border: 1px solid #131313
+        background: #ffffff21
+        cursor: pointer
+        position: relative
+        z-index: 2
+        transition: 0.1s linear
+        overflow: hidden
+        color: #2D082B
+        text-transform: uppercase
+        
+        &:hover
+          color: #fff
+
+      >a:first-child>button::after
+        content: ''
+        position: absolute
+        rotate: 25deg
+        width: 25%
+        height: 300%
+        top: -30px
+        left: -10px
+        background: #2D082B
+        transition: 0.15s linear
+        z-index: -1
+          
+      >a:first-child>button:hover::after
+        width: 120%
+        color: #fff
+
+      >a:last-child>button::after
+          content: ''
+          position: absolute
+          rotate: 25deg
+          width: 25%
+          height: 160%
+          top: -10px
+          left: -10px
+          background: #2D082B
+          transition: 0.15s ease
+          z-index: -1
+          
+      >a:last-child>button:hover::after
+        width: 120%
+        height: 160%
+        color: #fff
+
+
+
+          
+
 
   
