--- a/sass/style.sass
+++ b/sass/style.sass
@@ -28,6 +28,10 @@ $mobile-width: 510px
 @mixin mobile
   @media screen and ( max-width: #{$mobile-width} )
     @content
+
+@mixin disableTextMobile
+  @media screen and ( min-width: #{$small-tablet-width} )
+    @content
     
   
 
@@ -113,8 +117,6 @@ header
             scale: 90%
           @include smallTablet
             scale: 70%
-          @include mobile
-            scale: 50%
             height: 100%
 
       
@@ -125,8 +127,6 @@ header
           scale: 90%
         @include smallTablet
           scale: 70%
-        @include mobile
-          scale: 50%
           height: 100%
 
 
@@ -145,9 +145,21 @@ header
   @include tablet
     font-size: 1.2rem
   @include smallTablet
-    font-size: 0.78rem
-  @include mobile
-    font-size: 0.54rem
+    display: none
+
+
+
+.textMobile
+  width: 60%
+  @include disableTextMobile
+    display: none
+  >p
+    line-height: 100%
+    font-size: 2.4rem
+    text-align: center
+    @include mobile
+      font-size: 1.6rem  
+
 
 
 // section dos projetos feitos
