--- a/sass/style.sass
+++ b/sass/style.sass
@@ -145,20 +145,18 @@ header
   @include tablet
     font-size: 1.2rem
   @include smallTablet
-    display: none
+    font-size: 1rem
+    width: 95%
+  @include mobile
+    font-size: .73rem
+
 
 
 
 .textMobile
-  width: 60%
+  display: none
   @include disableTextMobile
     display: none
-  >p
-    line-height: 100%
-    font-size: 2.4rem
-    text-align: center
-    @include mobile
-      font-size: 1.6rem  
 
 
 
