update button animation

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -252,6 +252,7 @@ main>section
         top: -30px
         left: -10px
         background: #2D082B
+        font-weight: bold
         transition: 0.15s linear
         z-index: -1
           
@@ -263,17 +264,20 @@ main>section
           content: ''
           position: absolute
           rotate: 25deg
-          width: 25%
+          width: 0%
           height: 160%
           top: -10px
-          left: -10px
+          left: 50%
           background: #2D082B
-          transition: 0.15s ease
+          font-weight: bold
+          transition: 0.4s ease
           z-index: -1
           
       >a:last-child>button:hover::after
-        width: 120%
-        height: 160%
+        width: 150%
+        height: 300%
+        top: -30px
+        left: -20px
         color: #fff
 
 
