--- a/sass/style.sass
+++ b/sass/style.sass
@@ -45,6 +45,12 @@ header
   display: grid
   place-items: center
   background: radial-gradient(#61456a, #1c051c )
+  @include smallTablet
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    padding: 0% 10% 
 
   >section
     display: flex
@@ -62,7 +68,7 @@ header
       @include tablet
         font-size: 2.1rem
       @include smallTablet
-        font-size: 1.5rem
+        font-size: 1.8rem
       @include mobile
         font-size: 1rem  
         
@@ -78,7 +84,7 @@ header
   @include tablet
     font-size: 14rem
   @include smallTablet
-    font-size: 9rem
+    font-size: 9.5rem
   @include mobile
     font-size: 6.2rem  
 
@@ -99,6 +105,9 @@ header
       width: 100%
       display: flex
       justify-content: space-evenly
+  
+      @include smallTablet
+        display: none
       
       >a
         height: 80%
@@ -145,16 +154,26 @@ header
   @include tablet
     font-size: 1.2rem
   @include smallTablet
-    font-size: 1rem
-    width: 95%
+    text-indent: 0px
+    font-size: 2.2rem 
+    text-align: end
+    width: 70%
+
   @include mobile
     font-size: .73rem
 
 
 
 
-.textMobile
-  display: none
+.iconMobile
+  width: 100%
+  height: 20vh
+  background-color: 
+  display: flex
+  flex-direction: column
+  align-items: flex-end
+  justify-content: space-around
+
   @include disableTextMobile
     display: none
 
