--- a/sass/style.css
+++ b/sass/style.css
@@ -4,6 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Secular+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap");
 body {
   font-family: 'Secular One', sans-serif;
   color: #f1f1f1;
@@ -64,7 +65,7 @@ header > section > p {
 
 @media screen and (max-width: 510px) {
   header > section > p {
-    font-size: 1rem;
+    font-size: 1.8rem;
   }
 }
 
@@ -96,6 +97,7 @@ header > section > p {
 @media screen and (max-width: 510px) {
   .titleContainer {
     font-size: 6.2rem;
+    line-height: 82%;
   }
 }
 
@@ -125,7 +127,7 @@ header > section > p {
 
 @media screen and (max-width: 510px) {
   .titleContainer > div {
-    font-size: 3.6rem;
+    font-size: 5.2rem;
   }
 }
 
@@ -215,16 +217,22 @@ header > section > p {
 
 @media screen and (max-width: 775px) {
   .descContainer {
-    text-indent: 0px;
-    font-size: 2.2rem;
-    text-align: end;
-    width: 70%;
+    display: none;
   }
 }
 
-@media screen and (max-width: 510px) {
-  .descContainer {
-    font-size: .73rem;
+.descContainerMobile {
+  margin-top: 2rem;
+  display: none;
+  font-family: 'Raleway';
+  font-size: 1.8rem;
+  font-weight: 400;
+  color: #f1f1f1ce;
+}
+
+@media screen and (max-width: 775px) {
+  .descContainerMobile {
+    display: flex;
   }
 }
 
@@ -232,15 +240,28 @@ header > section > p {
   width: 100%;
   height: 20vh;
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: space-around;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 @media screen and (min-width: 775px) {
   .iconMobile {
     display: none;
   }
+}
+
+.iconMobile > a {
+  display: flex;
+  position: relative;
+}
+
+.iconMobile > a > img {
+  height: 5rem;
+}
+
+.iconMobile a:last-child > img {
+  height: 5.5rem;
+  transform: translateY(0.5rem);
 }
 
 .gradientBackground {
