--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,9 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap')
+
 @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap');
 
 
 $desktopMin-width: 1450px
@@ -70,7 +72,7 @@ header
       @include smallTablet
         font-size: 1.8rem
       @include mobile
-        font-size: 1rem  
+        font-size: 1.8rem
         
       
 
@@ -86,7 +88,8 @@ header
   @include smallTablet
     font-size: 9.5rem
   @include mobile
-    font-size: 6.2rem  
+    font-size: 6.2rem 
+    line-height: 82% 
 
   >div
     display: flex
@@ -99,7 +102,7 @@ header
     @include smallTablet
       font-size: 5.5rem
     @include mobile
-      font-size: 3.6rem  
+      font-size: 5.2rem  
 
     >div
       width: 100%
@@ -154,13 +157,18 @@ header
   @include tablet
     font-size: 1.2rem
   @include smallTablet
-    text-indent: 0px
-    font-size: 2.2rem 
-    text-align: end
-    width: 70%
+    display: none
 
-  @include mobile
-    font-size: .73rem
+.descContainerMobile
+  margin-top: 2rem
+  display: none
+  font-family: 'Raleway'
+  font-size: 1.8rem
+  font-weight: 400
+  color: #f1f1f1ce  
+  @include smallTablet
+    display: flex
+
 
 
 
@@ -170,12 +178,20 @@ header
   height: 20vh
   background-color: 
   display: flex
-  flex-direction: column
-  align-items: flex-end
-  justify-content: space-around
-
+  align-items: center
+  justify-content: space-evenly
   @include disableTextMobile
     display: none
+  >a
+    display: flex
+    position: relative
+    >img
+      height: 5rem
+
+  
+  a:last-child>img
+    height: 5.5rem
+    transform: translateY(.5rem)
 
 
 
